 * #1768 (Bug in ExponentiallyDampedCosineModel & SphericalModel)
 * #1771 (GridLayout hides the titles in the graph)
 * #1772 (MinimumVolumeClassifier cannot draw 1D samples)
 * #1774 (ExponentialModel::partialGradient is wrong)
 * #1775 (ExponentialModel does not account correlation with Covariance ctor)
 * #1776 (Typo in the Branin use case implementation)
 * #1784 (The drawPDF method of Histogram sometimes fail)
 * #1787 (CovarianceMatrix from SymmetricMatrix raises InvalidArgumentException)
 * #1790 (LinearModelResult.getFormula() method is not updated by Stepwise regression)
 * #1794 (Some doc examples seem to behave with new infrastructure)
 * #1796 (VonMisesFactory is missing)


== 1.16 release (2020-11-16) == #release-1.16

=== Library ===

==== Major changes ====
 * Drop normalization in KrigingAlgorithm
 * Drop normalization & transformation handling in GeneralLinearModelAlgorithm
 * XML/H5 storage (hdf5 library)
 * C++11 requirement

==== New classes ====
 * BlockIndependentDistribution
 * FejerAlgorithm
 * GridLayout
 * MinimumVolumeClassifier
 * StationaryFunctionalCovarianceModel
 * XMLH5StorageManager

==== API changes ====
 * Removed deprecated Weibull, WeibullFactory, WeibullMuSigma classes
 * Removed deprecated GumbelAB class
 * Removed deprecated Event class
 * Removed deprecated EnumerateFunction constructors
 * Removed various deprecated distribution accessors
 * Deprecated Pairs class, see VisualTest.DrawPairs
 * Deprecated SORMResult::getEventProbabilityHohenBichler, use SORMResult::getEventProbabilityHohenbichler instead
 * Deprecated SORMResult::getGeneralisedReliabilityIndexHohenBichler, use SORMResult::getGeneralisedReliabilityIndexHohenbichler instead
 * Renamed SobolSequence::MaximumNumberOfDimension as SobolSequence::MaximumDimension
 * Added VisualTest::DrawLinearModel(linearModelResult), useful if the test is performed on the training samples