@@ -42,10 +42,9 @@ Link to a computer code with coupling tools
 # * evaluates the output,
 # * writes the `"output.txt"` file.
 #
-# The command line to evaluate the code is: 
-# ```
-# python external_program.py input.py
-# ```
+# The command line to evaluate the code is:
+#
+# `python external_program.py input.py`
 
 # %%
 import openturns as ot
@@ -56,7 +55,7 @@ from matplotlib import pylab as plt
 ot.Log.Show(ot.Log.NONE)
 
 # %%
-# The following is the content `external_program.py` script.
+# The following is the content of the `external_program.py` script.
 
 # %%
 code = '''
@@ -113,7 +112,7 @@ f.write(content)
 f.close()
 
 # %%
-# The `input_template.py` file is a template which will be used to generate the actual file `"input.txt"`. 
+# The `input_template.py` file is a template which will be used to generate the actual file `input.txt`.
 
 # %%
 content = '''
@@ -163,7 +162,7 @@ myWrapper = ot.PythonFunction (3 ,2 , mySimulator )
 # %%
 X = [1.2 , 45, 91.8]
 Y = myWrapper(X)
-Y
+print(Y)
 
 # %%
 # Write the input file with the replace function
@@ -171,16 +170,14 @@ Y
 #
 # The simplest calling sequence is:
 #
-# ```
-# replace (infile , outfile , tokens , values )
-# ```
+# `replace(infile, outfile, tokens, values)`
 #
 # where
 #
-# * `infile`: a string, the (template) file to read, 
-# * `outfile`: a string, the file to write.
-# * `tokens` a list of N items, the regular expressions to find, 
-# * `values` a list of N items (strings, floats, etc...), the values to replace.
+# * `infile` is a string, the (template) file to read,
+# * `outfile` is a string, the file to write,
+# * `tokens` is a list of N items, the regular expressions to find,
+# * `values` is a list of N items (strings, floats, etc...), the values to replace.
 
 # %%
 X = [1.2 , 45, 91.8]
@@ -200,25 +197,22 @@ print(f.read())
 # Read the output with the get function
 # -------------------------------------
 #
-# The simplest calling sequence is:
+# The simplest calling sequence to get a list of values is:
 #
-# ```
-# Get a list of values
-# Y= get ( filename , tokens = None , skip_tokens = None , \
-# skip_lines = None , skip_cols = None )
-# Get a single value
-# Y= get_value ( filename , token = None , skip_token = 0, \
-# skip_line = 0, skip_col = 0)
-# ```
+# `Y = get(filename, tokens=None, skip_tokens=None, skip_lines=None, skip_cols=None)`
 #
 # where
 #
-# * `filename`: string, the file to read,  
-# * `tokens`: list of N items, the regular expression to search, 
-# * `skip_tokens`: list of N items, the number of tokens to ignore before reading the value, 
-# * `skip_lines`: list of N items, the number of rows to ignore before reading the value, 
-# * `skip_cols`: list of N items, the number of columns to ignore before reading the value, 
-# * `Y`: list of N floats (for `get`) or a float (for `get_value`).
+# * `filename` is a string (the file to read),
+# * `tokens` is a list of N items (regular expressions to search),
+# * `skip_tokens` is a list of N items (number of tokens to ignore before reading the value),
+# * `skip_lines` is a list of N items (number of rows to ignore before reading the value),
+# * `skip_cols` is a list of N items (number of columns to ignore before reading the value),
+# * `Y` is a list of N floats.
+#
+# And to get a single value:
+#
+# `Y = get_value(filename, token=None, skip_token=0, skip_line=0, skip_col=0)`
 
 # %%
 # Consider for example the following file.
