@@ -57,6 +57,7 @@
  * #1774 (ExponentialModel::partialGradient is wrong)
  * #1775 (ExponentialModel does not account correlation with Covariance ctor)
  * #1776 (Typo in the Branin use case implementation)
+ * #1781 (The link_to_an_external_code example has small bugs)
  * #1784 (The drawPDF method of Histogram sometimes fail)
  * #1787 (CovarianceMatrix from SymmetricMatrix raises InvalidArgumentException)
  * #1790 (LinearModelResult.getFormula() method is not updated by Stepwise regression)
